<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Acememo</string>
    <string name="app_id">259759420865692</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login to Facebook</string>
    <string name="howToPlay">How to Play:</string>
    <string name="instr1">Match the people you know with the things they like!</string>
	<string name="instr2">Drag the people to the images of the things they like.</string>
	<string name="level">1</string>
	<string name="startGame">Start Playing!</string>
	<string name="allow">Continue</string>
	<string name="disallow">Exit</string>
	<string name="facebookinstr">Yes</string>
	<string name="facebook">Facebook</string>
	<string name="play">Play Game</string>
	<string name="startWith">Start With</string>
	<string name="pairs">pair(s)</string>
	<string name="level1">Level 1</string>
	<string name="level3">Level 3</string>
	<string name="level1Statement">Emir Likes Pizza</string>
	<string name="level2StatementA">Raph Likes Photography</string>
	<string name="level2StatementB">Alison Likes Biking</string>
	<string name="ready">I\'m Ready!</string>
	<string name="continueTo">Continue to Next Level</string>
	<string name="gameover">Game Over</string>
	<string name="restart">Reset Game</string>
	<string name="playWithout">Play Without Facebook</string>
	<string name="Done">Done</string>
	<string name="memorize">Memorize the association below.</string>
	<string name="clickButtonReady">Click the button below once you think you have memorized everything!</string>
    <string name="clickButtonDone">Click the button below once you think you have correctly matched all the people!</string>
	<string name="levelIsTut">Level 1 is a Tutorial</string>
	<string name="level2">Level 2</string>
	<string name="goodJob">Good Job!!</string>
	<string name="review">Review Your Answers</string>
	<string name="nextLevel">Continue</string>
	<string name="oops">Oops, some associations are wrong.</string>
	<string name="replayLevel">Replay Level</string>
	<string name="level3Statement1">Emir Likes Pizza</string>
	<string name="level3Statement2">Raph Likes Photography</string>
	<string name="level3Statement3">Alison Like Biking</string>
	<string name="level3Statement4">Emir Likes Music</string>
	<string name="level3Statement5">Alison Likes Painting</string>
	<string name="level3Statement6">Raph Likes Computers</string>
	<string name="loadingFacebook">Loading Data From Facebook...</string>
	<string name="totalScore">Game</string>
	<string name="currentScore">Level</string>
	<string name="bestScore">Best</string>
</resources>
