<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <Button
       android:id="@+id/replay"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="108dp"
       android:text="@string/replayLevel" />

   <Button
       android:id="@+id/continueGame"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/replay"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="70dp"
       android:text="@string/continueTo" />

   <TextView
       android:id="@+id/goodJob"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="58dp"
       android:gravity="center"
       android:text="@string/goodJob"
       android:textSize="35sp" />

</RelativeLayout>
