<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/levelOneRelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/levelNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:text="@string/level1" />

   <TextView
        android:id="@+id/turotialInstructionAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/levelNum"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:text="@string/memorize" />
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/turotialInstructionAction"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/emir" />
    
    <ImageView
        android:id="@+id/likes"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_marginLeft="5dp"
		android:layout_below="@+id/turotialInstructionAction"
		android:layout_marginTop="30dp"
        android:src="@drawable/heart"/>
    
        <ImageView
        android:id="@+id/whatTheyLike1"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_toRightOf="@+id/likes"
        android:layout_marginLeft="5dp"
       	android:layout_below="@+id/turotialInstructionAction"
		android:layout_marginTop="30dp"
        android:src="@drawable/pizza"/>
        
    <TextView
        android:id="@+id/statement1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:text="@string/level1Statement" />
    
    
    <TextView
        android:id="@+id/buttonTut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imReady"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:text="@string/clickButtonReady" />
    
    
  <Button
        android:id="@+id/imReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/ready" />

  <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/imReady"
      android:layout_centerInParent="true"
      android:text="@string/Done" />

</RelativeLayout>