<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="61dp"
        android:background="@drawable/arrowdownblue" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="76dp"
        android:background="@drawable/arrowupblue" />
    
      <TextView
          android:id="@+id/startWithText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/gameLevelText"
          android:ems="10"
          android:gravity="center"
          android:textColor="#000000"
          android:textSize="32sp" 
          android:text="@string/startWith"/>

      <TextView
          android:id="@+id/gameLevelText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/button1"
          android:layout_alignTop="@+id/button1"
       	  android:layout_toLeftOf="@+id/button2"
          android:layout_toRightOf="@+id/button1"
          android:background="#3f48cc"
          android:ems="10"
          android:gravity="center"
          android:textColor="#FFFFFF"
          android:textSize="32sp" 
          android:text="@string/level"/>

      <TextView
          android:id="@+id/pairsText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/gameLevelText"
          android:ems="10"
          android:gravity="center"
          android:textColor="#000000"
          android:textSize="32sp" 
          android:text="@string/pairs"/>      
 
      <Button
          android:id="@+id/button3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="70dp"
          android:text="@string/play" />

   

</RelativeLayout>