<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

        <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"/>
    
    <TextView
        android:id="@+id/howToPlayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/howToPlay" />


    <Button
        android:id="@+id/facebookLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playWithoutFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/Login" />
    
   <Button
        android:id="@+id/playWithoutFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom = "50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/playWithout" />

    <ProgressBar
        android:id="@+id/facebookSync"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/facebookLoginButton"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/facebookLoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/startGame" />

    <WebView
        android:id="@+id/gifView1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/facebookSync"
        android:layout_centerInParent="true"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="55dp" />



</RelativeLayout>