<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    	<TextView 
    	    android:id="@+id/facebookTitle"
			android:layout_alignParentTop="true"
    	    android:layout_width="fill_parent"
    	    android:layout_height="50dp"
    	    android:background="@color/blue"
    	    android:textColor="@color/white"
    	    android:text="@string/facebook"
    	    android:textSize="23sp"
    	    android:padding="10dp"/>
    
    	<TextView 
    	    android:id="@+id/leftblue"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
    	    android:layout_width="2dp"
    	    android:layout_height="fill_parent"
    	    android:background="@color/blue"/>
    	
    	<TextView 
    	    android:id="@+id/rightblue"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
    	    android:layout_width="2dp"
    	    android:layout_height="fill_parent"
    	    android:background="@color/blue"/>
    	
    	<TextView 
    	    android:id="@+id/bottomblue"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
    	    android:layout_height="2dp"
    	    android:layout_width="fill_parent"
    	    android:background="@color/blue"/>
    	    	
    	<TextView 
    	    android:id="@+id/facebookInstructions"
    	    android:layout_centerInParent="true"
			android:layout_margin="3dp"
    	    android:layout_centerHorizontal="true"
    	    android:layout_width="fill_parent"
    	    android:layout_height="150dp"
    	    android:background="@color/gray"
    	    android:text="@string/facebookinstr"
    	    android:textSize="22sp"
    	    android:padding="10dp"/>
    
       <Button
          android:id="@+id/allow"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginBottom="178dp"
          android:layout_marginLeft="52dp"
          android:text="@string/allow" />
    
      <Button
          android:id="@+id/disallow"
          style="@style/AppTheme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/allow"
          android:layout_marginLeft="41dp"
          android:layout_toRightOf="@+id/allow"
          android:text="@string/disallow" />


</RelativeLayout>
