<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/currentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/totalText"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="32sp" />
    
        <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currentText"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:text="@string/nextLevel" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button3"
        android:layout_marginBottom="18dp"
        android:text="@string/restart" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:text="@string/review" />

</RelativeLayout>